//syntax = "proto2";
//package tcgserver;

syntax = "proto3";
import "packet_def.proto";

//////////////////////////////////////////////////////////////////	Connect

message AckConnectInfo
{ 
	int64  encode_seed = 1;
}

//////////////////////////////////////////////////////////////////	Login

message ReqLogin
{ 
	bytes  name = 1;
    bytes  passwd = 2;
}

message AckLogin
{ 
	RetLogin  result = 1;
	RetError  error = 2;
}

//////////////////////////////////////////////////////////////////	Create Account

message ReqCreateAccount
{
	string	name = 1;
	string	passwd = 2;
}

message AckCreateAccount
{
	RetCreateAccount	result = 1;
}




